--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <script src="./assets/libs/levenshtein.min.js"></script>
   <script src="./assets/js/proxy.js"></script>
+  <script src="./assets/js/prototype.js"></script>
 </body>
 </html>
