--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <script src="./assets/libs/levenshtein.min.js"></script>
   <script src="./assets/js/proxy.js"></script>
   <script src="./assets/js/prototype.js"></script>
+  <script src="./assets/js/generators.js"></script>
 </body>
 </html>
