add parcel for TS

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./assets/libs/levenshtein.min.js"></script>
+  <!-- <script src="./assets/libs/levenshtein.min.js"></script>
   <script src="./assets/js/proxy.js"></script>
   <script src="./assets/js/prototype.js"></script>
-  <script src="./assets/js/generators.js"></script>
+  <script src="./assets/js/generators.js"></script> -->
 </body>
 </html>
